# cppparser

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  CodingStyleAndGuidelines.md  Doxyfile.in  DoxyfileGithubAction  LICENSE  README.md  TODO.txt  comment-btyacc-constructs.sh  cppdom.cpp  cppobjfactory.cpp  cppparser.cpp  cppparser.sln  cppparser.vcxproj  cppparser.vcxproj.filters  cppparserConfig.cmake.in  cppprog.cpp  cpptoken.h  cppwriter.cpp  parser.l  parser.lex.cpp  parser.tab.c  parser.tab.cpp  parser.tab.h  parser.y  utils.h  y_tab.c  y_tab.h
cppast/: CMakeLists.txt
cppast/doxy/html/: annotated.html  classcppast_1_1CppAsmBlock-members.html  classcppast_1_1CppAsmBlock.html  classcppast_1_1CppAsmBlock__coll__graph.md5  classcppast_1_1CppAsmBlock__inherit__graph.map  classcppast_1_1CppAsmBlock__inherit__graph.md5  classcppast_1_1CppAtomicExpr-members.html  classcppast_1_1CppAtomicExpr.html  classcppast_1_1CppAtomicExprImplBase-members.html  classcppast_1_1CppAtomicExprImplBase.html  classcppast_1_1CppAtomicExprImplBase__inherit__graph.map  classcppast_1_1CppAtomicExprImplBase__inherit__graph.md5  classcppast_1_1CppAtomicExpr__coll__graph.map  classcppast_1_1CppAtomicExpr__coll__graph.md5  classcppast_1_1CppAtomicExpr__inherit__graph.map  classcppast_1_1CppAtomicExpr__inherit__graph.md5  classcppast_1_1CppAttributeSpecifierSequenceContainer-members.html  classcppast_1_1CppAttributeSpecifierSequenceContainer.html  classcppast_1_1CppAttributeSpecifierSequenceContainer__inherit__graph.map  classcppast_1_1CppAttributeSpecifierSequenceContainer__inherit__graph.md5  classcppast_1_1CppBinomialExpr-members.html  classcppast_1_1CppBinomialExpr.html  classcppast_1_1CppBinomialExpr__coll__graph.md5  classcppast_1_1CppBinomialExpr__inherit__graph.map  classcppast_1_1CppBinomialExpr__inherit__graph.md5  classcppast_1_1CppBlob-members.html  classcppast_1_1CppBlob.html  classcppast_1_1CppBlob__coll__graph.md5  classcppast_1_1CppBlob__inherit__graph.map  classcppast_1_1CppBlob__inherit__graph.md5  classcppast_1_1CppCStyleTypecastExpr-members.html  classcppast_1_1CppCStyleTypecastExpr.html  classcppast_1_1CppCStyleTypecastExpr__coll__graph.map  classcppast_1_1CppCStyleTypecastExpr__coll__graph.md5  classcppast_1_1CppCStyleTypecastExpr__inherit__graph.md5  classcppast_1_1CppCase-members.html  classcppast_1_1CppCase.html  classcppast_1_1CppCharLiteralExpr-members.html  classcppast_1_1CppCharLiteralExpr.html  classcppast_1_1CppCharLiteralExpr__coll__graph.md5  (+469 more)
cppast/doxy/html/search/: all_1.js  all_2.js  all_3.js  classes_0.js  files_0.js  functions_0.js  functions_1.js  functions_4.js  pages_0.js  searchdata.js
cppast/include/cppast/: README.md  cpp_access_type.h  cpp_asm_block.h  cpp_attribute_specifier_sequence_container.h  cpp_attribute_specifier_sequence_utility.h  cpp_blob.h  cpp_compound.h  cpp_compound_info_accessor.h  cpp_compound_utility.h  cpp_control_blocks.h  cpp_documentation_comment.h  cpp_entities.h  cpp_entity.h  cpp_entity_access_speciifier.h  cpp_entity_info_accessor.h  cpp_entity_ptr_defs.h  cpp_entity_type.h  cpp_entity_utility.h  cpp_enum.h  cpp_expression copy.h  cpp_expression.h  cpp_expression_operators.h  cpp_expression_type.h  cpp_forward_class_decl.h  cpp_func_info_accessor.h  cpp_function.h  cpp_function_info_accessor.h  cpp_goto_statement.h  cpp_info_accessors.h  cpp_label.h  cpp_macro_call.h  cpp_macro_definition.h  cpp_namespace_alias.h  cpp_operator.h  cpp_preprocessor.h  cpp_preprocessor_conditional.h  cpp_preprocessor_define.h  cpp_preprocessor_error.h  cpp_preprocessor_import.h  cpp_preprocessor_include.h  (+27 more)
cppast/include/cppast/helper/: cpp_entity_cast.h  cpp_entity_ptr.h  cpp_entity_type_traits.h  cpp_expression_cast.h  cpp_expression_type_traits.h
cppast/src/: cpp_attribute_specifier_sequence_container.cpp  cpp_blob.cpp  cpp_compound.cpp  cpp_control_blocks.cpp  cpp_entity_info_accessor.cpp  cpp_enum.cpp  cpp_expression.cpp  cpp_function.cpp  cpp_lambda.cpp  cpp_templatable_entity.cpp  cpp_template_param.cpp  cpp_var_type.cpp  cppast.cpp  string_utils.h
cppast/test/: CMakeLists.txt  cpp_entity_cast_test.cpp
cppparser/: CMakeLists.txt
cppparser/include/cppparser/: cpp_program.h  cpp_type_tree.h  cppparser.h  cpputil.h  string-utils.h
cppparser/src/: README.mdpp  comment-btyacc-constructs.sh  cpp_entity_builders.h  cpp_program.cpp  cppparser.cpp  cpptoken.h  cppvarinit.h  lexer-helper.cpp  lexer-helper.h  memory_util.h  optional.h  parser.h  parser.l  parser.l.h  parser.y  utils.cpp  utils.h
cppparser/test/: CMakeLists.txt
cppparser/test/app/: compare.h  cppparsertest.cpp  options.h
cppparser/test/e2e/: .clang-format
cppparser/test/e2e/test_input/: class.h  comment_test.h  control.cpp  enum.h  expr.cpp  for.cpp  func.h  if.cpp  macro.h  oper.h  var.cpp  var_init.h
cppparser/test/e2e/test_input/ObjectArxHeaders/: AcCell.h  AcConstrainedGeometry.h  AcConstraintGroupNode.h  AcDbArrayGripAppData.h  AcDbAssocActionBody.h  AcDbAssocArrayModifyActionBody.h  AcDbAssocArrayPathParameters.h  AcDbAssocCompoundActionParam.h  AcDbAssocDimDependencyBody.h  AcDbAssocEdgeChamferActionBody.h  AcDbAssocFaceActionParam.h  AcDbAssocGeomDependency.h  AcDbAssocIndexPersSubentId.h  AcDbAssocLoftedSurfaceActionBody.h  AcDbAssocNetwork.h  AcDbAssocParamBasedActionBody.h  AcDbAssocPathActionParam.h  AcDbAssocSimplePersSubentId.h  AcDbAssocSurfaceParameterNames.h  AcDbCore2dDefs.h  (+145 more)
cppparser/test/e2e/test_master/: OdFontServices.h  RxObject.h  class.h  comment_test.h  control.cpp  expr.cpp  func.h  if.cpp  oper.h  test.h
cppparser/test/unit/: attribute-specifier-sequence.cpp  disabled-code-test.cpp  embedded-snippet-test-base.h  error-handler-test.cpp  expr-test.cpp  initializer-list-test.cpp  namespace-test.cpp  preprocessor-test.cpp  structured-binding-test.cpp  template-test.cpp  test-hello-world.cpp  uniform-init-test.cpp  vardecl-test.cpp
cppparser/test/unit/test-files/: hello-world.cpp
cppwriter/: CMakeLists.txt  README.md
cppwriter/include/cppwriter/: cppindent.h  cppwriter.h
cppwriter/src/: cpp_expr_code_gen.h  cppwriter.cpp
(+6819 files in other folders)
